[package]
name = "ic-web3-rs"
version = "0.1.1"
description = "Ethereum JSON-RPC client for IC canisters."
license = "MIT"
edition = "2018"

[dependencies]
arrayvec = "0.7.1"
derive_more = "0.99.1"
ethabi = "^17.0"
ethereum-types = "^0.13"
libsecp256k1 = { version = "0.7.1", features = ["lazy-static-context"] }
futures = "0.3.5"
hex = "0.4"
jsonrpc-core = "18.0.0"
parking_lot = "0.12.0"
rlp = "0.5"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
pin-project = "1.0"
ic-cdk = "0.10.0"
ic-cdk-macros = "^0.6"
candid = "^0.9.1"
headers = { version = "0.3", optional = true }
async-native-tls = { package = "web3-async-native-tls", version = "0.4", optional = true, default-features = false }
async-std = { version = "1.6", optional = true }
tokio = { version = "1.0", optional = true, features = ["full"] }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7", optional = true, features = ["compat", "io"] }
soketto = { version = "0.7.0", optional = true }
url = { version = "2.1", optional = true }
js-sys = { version = "0.3.45", optional = true }
rand = { version = "0.8.1", optional = true }
getrandom = { version = "0.2", features = ["custom"] }
wasm-bindgen = { version = "0.2.68", optional = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.18", optional = true }
derive_builder = "0.12.0"

[features]
default = []
wasm = ["js-sys", "wasm-bindgen", "wasm-bindgen-futures"]
eip-1193 = ["wasm"]

[workspace]
